force-app/main/default/objects/Course_Registration__c/Course_Registration__c.object-meta.xml
<CustomObject>
    <label>Course Registration</label>
    <nameField>
        <displayFormat>REG-{0000}</displayFormat>
        <label>Course Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Registrations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>