force-app/main/default/objects/Course_Registration__c/fields/Additional_Notes_for_SIM__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_for_SIM__c</fullName>
    <label>Additional Notes for SIM</label>
    <type>TextArea</type>
</CustomField>