force-app/main/default/objects/Course_Registration__c/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <label>Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>