force-app/main/default/objects/Course_Registration__c/fields/Alternative_Attention__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Attention__c</fullName>
    <label>Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>