force-app/main/default/objects/Course_Registration__c/fields/Alternative_Billing_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Billing_Line_3__c</fullName>
    <label>Billing Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>