force-app/main/default/objects/Course_Registration__c/fields/Alternative_City__c.field-meta.xml
<CustomField>
    <fullName>Alternative_City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>