force-app/main/default/objects/Course_Registration__c/fields/Alternative_Country__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>