force-app/main/default/objects/Course_Registration__c/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>