force-app/main/default/objects/Course_Registration__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>