force-app/main/default/objects/Course_Registration__c/fields/Alternative_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>