force-app/main/default/objects/Course_Registration__c/fields/Alternative_State__c.field-meta.xml
<CustomField>
    <fullName>Alternative_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>