force-app/main/default/objects/Course_Registration__c/fields/B2B_Discount_Y_N__c.field-meta.xml
<CustomField>
    <fullName>B2B_Discount_Y_N__c</fullName>
    <formula>&apos;N&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Discount(Y/N)</label>
    <type>Text</type>
</CustomField>