force-app/main/default/objects/Course_Registration__c/fields/Billing_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Line_2__c</fullName>
    <label>Billing Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>