force-app/main/default/objects/Course_Registration__c/fields/Certificate_Course_Category__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Course_Category__c</fullName>
    <formula>Text(Course_Run_Id__r.Course__r.Certificate_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Course Category</label>
    <type>Text</type>
</CustomField>