force-app/main/default/objects/Course_Registration__c/fields/Certificate_Course_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Course_Instructor__c</fullName>
    <formula>Course_Run_Id__r.Certificate_Instructor_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Course Instructor</label>
    <type>Text</type>
</CustomField>