force-app/main/default/objects/Course_Registration__c/fields/Certificate_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Course_Name__c</fullName>
    <description>MVP1.0</description>
    <formula>Course_Run_Id__r.Certificate_Course_Name__c</formula>
    <label>Certificate Course Name</label>
    <type>Text</type>
</CustomField>