force-app/main/default/objects/Course_Registration__c/fields/Certificate_No__c.field-meta.xml
<CustomField>
    <fullName>Certificate_No__c</fullName>
    <defaultValue>&quot;CER-00001&quot;</defaultValue>
    <label>Certificate No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>