force-app/main/default/objects/Course_Registration__c/fields/Certificate_Start_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Start_End_Date__c</fullName>
    <formula>Course_Run_Id__r.Certificate_Start_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Start End Date</label>
    <type>Text</type>
</CustomField>