force-app/main/default/objects/Course_Registration__c/fields/Community_Contact_s_Registration__c.field-meta.xml
<CustomField>
    <fullName>Community_Contact_s_Registration__c</fullName>
    <formula>IF
(
AND
(
Contact__r.Id  =  $User.ContactId, 
$User.IsCommunityUser__c = TRUE
),
TRUE, 
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Contact&apos;s Registration?</label>
    <type>Checkbox</type>
</CustomField>