force-app/main/default/objects/Course_Registration__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <inlineHelpText>Please leave it as &quot;Blank&quot; if you wish to repopulate the company details</inlineHelpText>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>