force-app/main/default/objects/Course_Registration__c/fields/Company_UEN_No__c.field-meta.xml
<CustomField>
    <fullName>Company_UEN_No__c</fullName>
    <description>MVP1.0</description>
    <inlineHelpText>If you are registering for a Company Course, please input the Company UEN No.</inlineHelpText>
    <label>Company UEN No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>