force-app/main/default/objects/Course_Registration__c/fields/Contact_Category__c.field-meta.xml
<CustomField>
    <fullName>Contact_Category__c</fullName>
    <formula>IF( TEXT(Country__c) != &apos;Singapore&apos;,&apos;INTERNATIONAL&apos;,&apos;LOCAL&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Category</label>
    <type>Text</type>
</CustomField>