force-app/main/default/objects/Course_Registration__c/fields/Contact_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Company_Name__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Company Name</label>
    <type>Text</type>
</CustomField>