force-app/main/default/objects/Course_Registration__c/fields/Continue_Registration__c.field-meta.xml
<CustomField>
    <fullName>Continue_Registration__c</fullName>
    <formula>IF(
AND(RecordType.DeveloperName=&apos;Master_Course_Registration&apos;,
ISPICKVAL(Registration_Status__c,&apos;Draft&apos;),
ISPICKVAL(Payment_Status__c,&apos;Unpaid&apos;),
Course_Run_Id__r.Active__c,
AND(TODAY()&gt;=Course_Run_Id__r.Registration_Open_Date__c,TODAY()&lt;=Course_Run_Id__r.Registration_Close_Date__c)
),
HYPERLINK($Label.Community_URL+&quot;/s/bulk-registration?courseruncode=&quot;+Course_Run_Id__r.Course_Run_Code__c,
 IMAGE(&quot;/resource/Clickhere&quot;, &quot;Click here&quot;) 
) 
,
&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Continue Registration?</label>
    <type>Text</type>
</CustomField>