force-app/main/default/objects/Course_Registration__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>Course Name associated with the Course Run</description>
    <formula>Course_Run_Id__r.Course__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Course Name associated with the Course Run</inlineHelpText>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>