force-app/main/default/objects/Course_Registration__c/fields/Course_Reg_ID18__c.field-meta.xml
<CustomField>
    <fullName>Course_Reg_ID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Reg ID18</label>
    <type>Text</type>
</CustomField>