force-app/main/default/objects/Course_Registration__c/fields/Course_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Course_Run_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course Run</label>
    <referenceTo>Course_Run__c</referenceTo>
    <relationshipLabel>Course Registrations</relationshipLabel>
    <relationshipName>Course_Registrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>