force-app/main/default/objects/Course_Registration__c/fields/Course_Run_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Course_Run_Owner_Email__c</fullName>
    <description>MVP1.0 This field stores the Email Address of the Course Run Owner</description>
    <inlineHelpText>This field stores the Email Address of the Course Run Owner</inlineHelpText>
    <label>Course Run Owner (Email)</label>
    <type>Email</type>
</CustomField>