force-app/main/default/objects/Course_Registration__c/fields/Course_Run_Start_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Run_Start_End_Date__c</fullName>
    <formula>Course_Run_Id__r.Course_Run_Start_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Run Start End Date</label>
    <type>Text</type>
</CustomField>