force-app/main/default/objects/Course_Registration__c/fields/Course_Survey_Participant__c.field-meta.xml
<CustomField>
    <fullName>Course_Survey_Participant__c</fullName>
    <description>MVP1.0</description>
    <label>Course Survey (Participant)</label>
    <type>Url</type>
</CustomField>