force-app/main/default/objects/Course_Registration__c/fields/Course_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Title__c</fullName>
    <formula>Course_Run_Id__r.Course__r.Course_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Title</label>
    <type>Text</type>
</CustomField>