force-app/main/default/objects/Course_Registration__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural and Fishery Workers</fullName>
            </value>
            <value>
                <fullName>Associate Professionals and Technicians</fullName>
            </value>
            <value>
                <fullName>Cleaners, Labourers and Related Workers</fullName>
            </value>
            <value>
                <fullName>Clerical Workers</fullName>
            </value>
            <value>
                <fullName>Legislators, Senior Officials and Managers</fullName>
            </value>
            <value>
                <fullName>Plan and Machine Operators and Assemblers</fullName>
            </value>
            <value>
                <fullName>Production Craftsmen &amp; Related Workers</fullName>
            </value>
            <value>
                <fullName>Professionals</fullName>
            </value>
            <value>
                <fullName>Service Workers and Shop and Market Sales Workers</fullName>
            </value>
            <value>
                <fullName>Workers not classifed by Occupation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>