force-app/main/default/objects/Course_Registration__c/fields/Designation_Level__c.field-meta.xml
<CustomField>
    <fullName>Designation_Level__c</fullName>
    <label>Designation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top Management</fullName>
            </value>
            <value>
                <fullName>Senior Management</fullName>
            </value>
            <value>
                <fullName>Middle Management</fullName>
            </value>
            <value>
                <fullName>Junior Management</fullName>
            </value>
            <value>
                <fullName>Non-Managerial Professional/ Technical Executive</fullName>
            </value>
            <value>
                <fullName>Non-Executive Staff</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>