force-app/main/default/objects/Course_Registration__c/fields/Home_No__c.field-meta.xml
<CustomField>
    <fullName>Home_No__c</fullName>
    <label>Home No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>