force-app/main/default/objects/Course_Registration__c/fields/How_did_you_get_to_know_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_get_to_know_us__c</fullName>
    <label>How did you get to know us?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Online Website</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Friends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>