force-app/main/default/objects/Course_Registration__c/fields/IsMember__c.field-meta.xml
<CustomField>
    <fullName>IsMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MVP1.0 Please consider this option to avail Membership Prices on the Course Fees</description>
    <inlineHelpText>Please consider this option to avail Membership Prices on the Course Fees</inlineHelpText>
    <label>SIM Society Member?</label>
    <type>Checkbox</type>
</CustomField>