force-app/main/default/objects/Course_Registration__c/fields/Learner_Notification_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Learner_Notification_Email_Subject__c</fullName>
    <formula>&quot;&lt;CONFIDENTIAL&gt; SIM SEMINAR REGISTRATION: &quot; &amp; LEFT(Course_Title__c, 120) &amp; &quot; (&quot; &amp; Course_Run_Start_End_Date__c &amp; &quot;) - &quot; &amp; LEFT(First_Name__c &amp; &quot; &quot; &amp; Last_Name__c, 40)</formula>
    <label>Learner Notification Email Subject</label>
    <type>Text</type>
</CustomField>