force-app/main/default/objects/Course_Registration__c/fields/Marketing_Channel_Consented__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channel_Consented__c</fullName>
    <label>Marketing Channel Consented</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Channel</valueSetName>
    </valueSet>
</CustomField>