force-app/main/default/objects/Course_Registration__c/fields/Marketing_Channel_Email__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channel_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Channel (Email)</label>
    <type>Checkbox</type>
</CustomField>