force-app/main/default/objects/Course_Registration__c/fields/Marketing_Consent_Clause__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Consent Clause</label>
    <type>Checkbox</type>
</CustomField>