force-app/main/default/objects/Course_Registration__c/fields/Masked_NRIC__c.field-meta.xml
<CustomField>
    <fullName>Masked_NRIC__c</fullName>
    <formula>IF(LEN(NRIC__c)&gt;0, &apos;XXXXX&apos; +  RIGHT(NRIC__c, 4), &apos;&apos;)</formula>
    <label>Masked Identification Number</label>
    <type>Text</type>
</CustomField>