force-app/main/default/objects/Course_Registration__c/fields/Mobile_No_Mask__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No_Mask__c</fullName>
    <formula>&quot;XXXX&quot; &amp; right(Mobile_No__c,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile No Mask</label>
    <type>Text</type>
</CustomField>