force-app/main/default/objects/Course_Registration__c/fields/Monthly_Basic_Salary__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Basic_Salary__c</fullName>
    <label>Monthly Basic Salary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below $1000</fullName>
            </value>
            <value>
                <fullName>$1,000 - $1,499</fullName>
            </value>
            <value>
                <fullName>$1,500 - $1,900</fullName>
            </value>
            <value>
                <fullName>$1,901 - $2,000</fullName>
            </value>
            <value>
                <fullName>$2,001 - $2,499</fullName>
            </value>
            <value>
                <fullName>$2,500 - $2,999</fullName>
            </value>
            <value>
                <fullName>$3,000 - $3,499</fullName>
            </value>
            <value>
                <fullName>$3,500 and Above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>