force-app/main/default/objects/Course_Registration__c/fields/Need_User_Account__c.field-meta.xml
<CustomField>
    <fullName>Need_User_Account__c</fullName>
    <label>Need User Account?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>