force-app/main/default/objects/Course_Registration__c/fields/NRIC__c.field-meta.xml
<CustomField>
    <fullName>NRIC__c</fullName>
    <label>Identification Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>