force-app/main/default/objects/Course_Registration__c/fields/Office_No__c.field-meta.xml
<CustomField>
    <fullName>Office_No__c</fullName>
    <label>Office No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>