force-app/main/default/objects/Course_Registration__c/fields/P_O_Number__c.field-meta.xml
<CustomField>
    <fullName>P_O_Number__c</fullName>
    <label>P.O Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>