force-app/main/default/objects/Course_Registration__c/fields/Parent_Registration__c.field-meta.xml
<CustomField>
    <fullName>Parent_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Registration</label>
    <referenceTo>Course_Registration__c</referenceTo>
    <relationshipLabel>Course Registrations</relationshipLabel>
    <relationshipName>Course_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>