force-app/main/default/objects/Course_Registration__c/fields/PDPA_Consent_Clause__c.field-meta.xml
<CustomField>
    <fullName>PDPA_Consent_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDPA Consent Clause</label>
    <type>Checkbox</type>
</CustomField>