force-app/main/default/objects/Course_Registration__c/fields/Persons_with_Disabilities__c.field-meta.xml
<CustomField>
    <fullName>Persons_with_Disabilities__c</fullName>
    <label>Persons with Disabilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>