force-app/main/default/objects/Course_Registration__c/fields/Preferred_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Certificate_Name__c</fullName>
    <label>Preferred Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>