force-app/main/default/objects/Course_Registration__c/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMAIL</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>PHONE</fullName>
                <label>Phone</label>
            </value>
            <value>
                <fullName>FAX</fullName>
                <isActive>false</isActive>
                <label>FAX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>