force-app/main/default/objects/Course_Registration__c/fields/Primary_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email_Address__c</fullName>
    <label>Primary Email Address</label>
    <type>Email</type>
</CustomField>