force-app/main/default/objects/Course_Registration__c/fields/Provider_Access_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Provider_Access_End_Date__c</fullName>
    <label>Provider Access End Date</label>
    <type>Date</type>
</CustomField>