force-app/main/default/objects/Course_Registration__c/fields/Provider_Access_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Provider_Access_Start_Date__c</fullName>
    <label>Provider Access Start Date</label>
    <type>Date</type>
</CustomField>