force-app/main/default/objects/Course_Registration__c/fields/Provider_URL__c.field-meta.xml
<CustomField>
    <fullName>Provider_URL__c</fullName>
    <formula>Course_Run_Id__r.Provider_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider URL</label>
    <type>Text</type>
</CustomField>