force-app/main/default/objects/Course_Registration__c/fields/Residency_Status__c.field-meta.xml
<CustomField>
    <fullName>Residency_Status__c</fullName>
    <inlineHelpText>Refers to type of residency in Singapore</inlineHelpText>
    <label>Residency Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Citizen</fullName>
            </value>
            <value>
                <fullName>Dependent Pass</fullName>
            </value>
            <value>
                <fullName>Employment Pass/Work Permit</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Permanent Resident</fullName>
            </value>
            <value>
                <fullName>Professional Pass</fullName>
            </value>
            <value>
                <fullName>Student Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>