force-app/main/default/objects/Course_Registration__c/fields/RMIT_Alumni__c.field-meta.xml
<CustomField>
    <fullName>RMIT_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RMIT Alumni</label>
    <type>Checkbox</type>
</CustomField>